--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "CV"
+  - title: "CV11"
     url: /assets/docs/Mingyang Wei_Resume.pdf
     description: "View my resume"
   - title: "External Link"
