--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ atom_feed:
 author:
   name: "<span class='side-font'>Mingyang Wei</span>"
   avatar: "/assets/images/Me.jpeg"
-  bio: "<span class='side-font'>MSCS Student@Emory</span>" # Note: Markdown is allowed
+  bio: "<span class='side-font'>RA@Emory; MS@Emory; BE@WHU</span>" # Note: Markdown is allowed
   location: "<span class='side-font'>Atlanta, GA, USA</span>"
   links:
     - label: "<span class='side-font'>Linkedin</span>"
@@ -123,9 +123,9 @@ author:
     - label: "<span class='side-font'>GitHub</span>"
       icon: "fab fa-fw fa-github-alt"
       url: "https://github.com/myweiii"
-    - label: "<span class='side-font'>Instagram</span>"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/mingyang.mywei"
+    #- label: "<span class='side-font'>Instagram</span>"
+    #  icon: "fab fa-fw fa-instagram"
+    #  url: "https://instagram.com/mingyang.mywei"
     - label: "<span class='side-font'>Email</span>"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:mingyang.wei@emory.edu"
@@ -137,8 +137,6 @@ footer:
       url: "https://emory.edu"
     - label: "<span class='side-font'>Emory Melody Lab</span>"
       url: "https://github.com/Emory-Melody"
-    - label: "<span class='side-font'>Prof. Wei Jin's Homepage</span>"
-      url: "https://www.cs.emory.edu/~wjin30/"
 
 
 
