--- a/_config.yml
+++ b/_config.yml
@@ -120,9 +120,11 @@ author:
     - label: "<span class='side-font'>Linkedin</span>"
       icon: "fab fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/mingyangwei/"
+      target: "_blank"
     - label: "<span class='side-font'>GitHub</span>"
       icon: "fab fa-fw fa-github-alt"
       url: "https://github.com/myweiii"
+      target: "_blank"
     #- label: "<span class='side-font'>Instagram</span>"
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/mingyang.mywei"
@@ -135,8 +137,10 @@ footer:
   links:
     - label: "<span class='side-font'>Emory University</span>"
       url: "https://emory.edu"
+      target: "_blank"
     - label: "<span class='side-font'>Emory Melody Lab</span>"
       url: "https://github.com/Emory-Melody"
+      target: "_blank"
 
 
 
