--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 locale: "en-US"
-title: "<span class='side-font'>Homepage</span>"
+title: "Homepage"
 title_separator: "|"
 #subtitle: ""
 name: Mingyang Wei
@@ -35,8 +35,8 @@ github_username:  myweiii#
 
 
 # Build settings
-#theme: minimal-mistakes-jekyll
-remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+theme: minimal-mistakes-jekyll
+#remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: "mint"
 plugins:
   - jekyll-feed
@@ -103,10 +103,10 @@ paginate: 5
 timezone: America/New_York
 enable_copy_code_button: true
 
-search: true
+search: false
 lunr:
-  search_within_pages: true
-  search_full_content: true
+  search_within_pages: false
+  search_full_content: false
 atom_feed:
   hide: true
 
@@ -140,6 +140,10 @@ footer:
     - label: "<span class='side-font'>Emory Melody Lab</span>"
       url: "https://github.com/Emory-Melody"
 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-E3W94CY71D"
 
 
 # Exclude from processing.
