--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,5 @@ main:
   - title: "<span class='side-font'>CV</span>"
     url: /assets/docs/CV_MingyangWei.pdf
     description: "View my resume"
+  - title: "<span id='theme-toggle'><i class='fa-solid fa-moon'></i></span>"
+    url: "#"
