--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ github_username:  myweiii#
 
 
 # Build settings
-theme: minimal-mistakes-jekyll
-#remote_theme: "mmistakes/minimal-mistakes@4.26.2"
+#theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
 minimal_mistakes_skin: "mint"
 plugins:
   - jekyll-feed
